--- a/io-2012-slides/template.html
+++ b/io-2012-slides/template.html
@@ -38,181 +38,232 @@ URL: https://code.google.com/p/io-2012-slides
       <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
       <article class="auto-fadein flexbox vcenter">
         <h2 data-config-title><!-- populated from slide_config.json --></h1>
-        <h3 data-config-subtitle><!-- populated from slide_config.json --></h2>
-        <p data-config-presenter><!-- populated from slide_config.json --></p>
-      </article>
-    </slide>
+          <h3 data-config-subtitle><!-- populated from slide_config.json --></h2>
+            <p data-config-presenter><!-- populated from slide_config.json --></p>
+          </article>
+        </slide>
 
-    <slide>
-      <article class="flexbox vcenter">
-        <h2><center>Agile</center></h2>
-      </article>
-    </slide>
+        <slide>
+          <article class="flexbox vcenter">
+            <h2><center>Agile</center></h2>
+          </article>
+        </slide>
 
-    <slide>
-     <article class="flexbox vcenter">
-      <h2><center>Informática</center></h2>
-    </article>
-  </slide>
-
-
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>"Esto NO ES</center>
-      </h2>
-      <h3>
-        <center>lo que pedí"</center>
-      </h3>
-    </article>
-  </slide>
-
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>"Esto está</center>
-      </h2>
-      <h3>
-        <center>OBSOLETO"</center>
-      </h3>
-    </article>
-  </slide>
-
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>"Hay que volver a hacerlo</center>
-      </h2>
-      <h3>
-        <center>desde cero"</center>
-      </h3>
-    </article>
-  </slide>
-
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>Agile Manifesto</center>
-      </h2>
-      <h3>
-        <center>www.agilemanifesto.org</center>
-      </h3>
-    </article>
-  </slide>
-
-  <slide class="fill nobackground" style="background-image: url(images/manifesto.png)">
-  </slide>
+        <slide>
+         <article class="flexbox vcenter">
+          <h2><center>Informática</center></h2>
+        </article>
+      </slide>
 
 
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>Hacemos algo</center>
-      </h2>
-      <h3>
-        <center>distinto</center>
-      </h3>
-    </article>
-  </slide>
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"Esto NO ES</center>
+          </h2>
+          <h3>
+            <center>lo que pedí"</center>
+          </h3>
+        </article>
+      </slide>
 
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>¿Desarrolladores</center>
-      </h2>
-      <h3>
-        <center>con traje?</center>
-      </h3>
-    </article>
-  </slide>
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"Esto está</center>
+          </h2>
+          <h3>
+            <center>obsoleto"</center>
+          </h3>
+        </article>
+      </slide>
 
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>Herencia</center>
-      </h2>
-    </article>
-  </slide>
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"Hay que volver a hacerlo</center>
+          </h2>
+          <h3>
+            <center>desde cero"</center>
+          </h3>
+        </article>
+      </slide>
 
-  <slide>
-    <article class="flexbox vcenter">
-      <h2>
-        <center>No es un</center>
-      </h2>
-        <h3>
-      <center>TORNILLO</center>
-    </h3>
-    </article>
-  </slide>
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Agile Manifesto</center>
+          </h2>
+          <h3>
+            <center>www.agilemanifesto.org</center>
+          </h3>
+        </article>
+      </slide>
 
-    <slide class="reverse">
-    <article class="flexbox vcenter">
-      <h2>
-        <center>Todo</center>
-      </h2>
-        <h3>
-      <center>cambia</center>
-    </h3>
-    </article>
-  </slide>
+      <slide class="fill nobackground" style="background-image: url(images/manifesto.png)">
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Individuals and interactions</center>
+          </h2>
+          <h4>
+            <center>Processes and tools</center>
+          </h4>
+        </article>
+      </slide>
+
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Working software</center>
+          </h2>
+          <h4>
+            <center>Comprehensive documentation</center>
+          </h4>
+        </article>
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Customer collaboration</center>
+          </h2>
+          <h4>
+            <center>Contract negotiation</center>
+          </h4>
+        </article>
+      </slide>
+
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Responding to change</center>
+          </h2>
+          <h4>
+            <center>Contract negotiation</center>
+          </h4>
+        </article>
+      </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/manifesto.png)">
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Hacemos algo</center>
+          </h2>
+          <h3>
+            <center>distinto</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>¿Desarrolladores</center>
+          </h2>
+          <h3>
+            <center>con traje?</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Herencia</center>
+          </h2>
+        </article>
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>No es un</center>
+          </h2>
+          <h3>
+            <center>tornillo</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Todo</center>
+          </h2>
+          <h3>
+            <center>cambia</center>
+          </h3>
+        </article>
+      </slide>
 
 
-    <slide class="reverse">
-    <article class="flexbox vcenter">
-      <h2>
-        <center>Alta</center>
-      </h2>
-        <h3>
-      <center>incertidumbre</center>
-    </h3>
-    </article>
-  </slide>
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Alta</center>
+          </h2>
+          <h3>
+            <center>incertidumbre</center>
+          </h3>
+        </article>
+      </slide>
 
-    <slide>
-    <hgroup>
-      <h3>En resumen...</h3>
-    </hgroup>
-    <article>
-      <ul class="build">
-        <li>Cambios constantes</li>
-        <li>No podemos definir el producto</li>
-        <li>Somos diferentes</li>
-      </ul>
-    </article>
-  </slide>
+      <slide>
+        <hgroup>
+          <h3>En resumen...</h3>
+        </hgroup>
+        <article>
+          <ul class="build">
+            <li>Cambios constantes</li>
+            <li>No podemos definir el producto</li>
+            <li>Somos diferentes</li>
+          </ul>
+        </article>
+      </slide>
 
-  <slide class="fill nobackground" style="background-image: url(images/cannon.jpg)">
-  </slide>
+      <slide class="fill nobackground" style="background-image: url(images/scrum.png)">
+      </slide>
 
-
-
-  <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
-  </slide>
-
-    <slide class="fill nobackground" style="background-image: url(images/sky.jpg)">
-    <hgroup>
-      <h2 class="white">Full Image (with Optional Header)</h2>
-    </hgroup>
-    <footer class="source white">www.flickr.com/photos/25797459@N06/5438799763/</footer>
-  </slide>
+      <slide class="fill nobackground" style="background-image: url(images/cannon.jpg)">
+      </slide>
 
 
-  <slide class="thank-you-slide segue nobackground">
-    <aside class="gdbar right"><img src="images/agilearagon.jpg"></aside>
-    <article class="flexbox vleft auto-fadein">
-      <h2>&lt;¡Gracias!&gt;</h2>
-      <p>Javier Martínez</p>
-      <p>@lasdelpulpo</p>
-    </article>
-    </p>
-  </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/missile.jpg)">
+      </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
+      </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/sky.jpg)">
+        <hgroup>
+          <h2 class="white">Full Image (with Optional Header)</h2>
+        </hgroup>
+        <footer class="source white">www.flickr.com/photos/25797459@N06/5438799763/</footer>
+      </slide>
 
 
-  <slide class="backdrop"></slide>
+      <slide class="thank-you-slide segue nobackground">
+        <aside class="gdbar right"><img src="images/agilearagon.jpg"></aside>
+        <article class="flexbox vleft auto-fadein">
+          <h2>¡Gracias!</h2>
+          <p>Javier Martínez</p>
+          <p>@lasdelpulpo</p>
+        </article>
+      </slide>
 
-</slides>
 
-<script>
+    <slide class="backdrop"></slide>
+
+  </slides>
+
+  <script>
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-XXXXXXXX-1']);
   _gaq.push(['_trackPageview']);
@@ -222,7 +273,7 @@ URL: https://code.google.com/p/io-2012-slides
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-</script>
+  </script>
 
 <!--[if IE]>
   <script src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
