--- a/io-2012-slides/template.html
+++ b/io-2012-slides/template.html
@@ -28,11 +28,11 @@ URL: https://code.google.com/p/io-2012-slides
 
   <slides class="layout-widescreen">
 
-    <slide class="logoslide nobackground">
+   <!-- <slide class="logoslide nobackground">
       <article class="flexbox vcenter">
         <span></span>
       </article>
-    </slide>
+    </slide>-->
 
     <slide class="title-slide segue nobackground">
       <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
@@ -161,6 +161,20 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
+
+      <slide class="fill nobackground" style="background-image: url(images/zamora.jpg)">
+        <hgroup>
+          <h3>Fútbol</h3>
+        </hgroup>
+        <article>
+          <ul class="build">
+            <li>1863</li>
+            <li>1980</li>
+          </ul>
+        </article>
+      </slide>
+
+
       <slide>
         <article class="flexbox vcenter">
           <h2>
@@ -233,19 +247,104 @@ URL: https://code.google.com/p/io-2012-slides
       <slide class="fill nobackground" style="background-image: url(images/cannon.jpg)">
       </slide>
 
-
-
       <slide class="fill nobackground" style="background-image: url(images/missile.jpg)">
       </slide>
 
       <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
       </slide>
 
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Product</center>
+          </h2>
+          <h3>
+            <center>owner</center>
+          </h3>
+        </article>
+      </slide>
+
+     <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Scrum</center>
+          </h2>
+          <h3>
+            <center>master</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Implantar</center>
+          </h2>
+          <h3>
+            <center>agile</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide class='reverse'>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"No tenemos</center>
+          </h2>
+          <h3>
+            <center>tiempo"</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide class='reverse'>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"Personas</center>
+          </h2>
+          <h3>
+            <center>en varios proyectos"</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide class='reverse'>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"No todos</center>
+          </h2>
+          <h3>
+            <center>pueden asistir"</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Equipo</center>
+          </h2>
+          <h3>
+            <center>autoorganizado</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Otros</center>
+          </h2>
+          <h3>
+            <center>entornos</center>
+          </h3>
+        </article>
+      </slide>
+
       <slide class="fill nobackground" style="background-image: url(images/sky.jpg)">
         <hgroup>
-          <h2 class="white">Full Image (with Optional Header)</h2>
+          <h2 class="white">Fórmula 1</h2>
         </hgroup>
-        <footer class="source white">www.flickr.com/photos/25797459@N06/5438799763/</footer>
       </slide>
 
 
