--- a/io-2012-slides/template.html
+++ b/io-2012-slides/template.html
@@ -56,6 +56,17 @@ URL: https://code.google.com/p/io-2012-slides
       </slide>
 
 
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Top 3</center>
+          </h2>
+          <h3>
+            <center>Frases</center>
+          </h3>
+        </article>
+      </slide>
+
       <slide>
         <article class="flexbox vcenter">
           <h2>
@@ -67,6 +78,27 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
+      <slide class="fill nobackground" style="background-image: url(images/mortadelo.png)">
+      </slide>
+
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"¿Está </center>
+          </h2>
+          <h3>
+            <center>terminado?"</center>
+          </h3>
+        </article>
+      </slide>
+
+
+      <slide class="fill nobackground" style="background-image: url(images/commit.jpg)">
+      </slide>
+
+
+
+
       <slide class="reverse">
         <article class="flexbox vcenter">
           <h2>
@@ -76,6 +108,9 @@ URL: https://code.google.com/p/io-2012-slides
             <center>obsoleto"</center>
           </h3>
         </article>
+      </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/xkcd.png)">
       </slide>
 
       <slide>
@@ -168,8 +203,8 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
         <article>
           <ul class="build">
-            <li>1863</li>
-            <li>1980</li>
+            <li style="color: #F88017;font-weight:bold">1863</li>
+            <li style="color: #F88017;font-weight:bold">1980</li>
           </ul>
         </article>
       </slide>
@@ -241,7 +276,40 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide class="fill nobackground" style="background-image: url(images/scrum.png)">
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Scrum</center>
+          </h2>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>ITERATIVO</center>
+          </h2>
+          <h3>
+            <center>INCREMENTAL</center>
+          </h3>
+        </article>
+      </slide>
+
+       <slide class="fill nobackground" style="background-image: url(images/scrum.png)">
+      </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/incremental.png)">
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Dar valor</center>
+          </h2>
+          <h3>
+            <center>al cliente</center>
+          </h3>
+        </article>
       </slide>
 
       <slide class="fill nobackground" style="background-image: url(images/cannon.jpg)">
@@ -250,7 +318,15 @@ URL: https://code.google.com/p/io-2012-slides
       <slide class="fill nobackground" style="background-image: url(images/missile.jpg)">
       </slide>
 
-      <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Scrum</center>
+          </h2>
+          <h3>
+            <center>roles</center>
+          </h3>
+        </article>
       </slide>
 
       <slide >
@@ -264,7 +340,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-     <slide >
+      <slide >
         <article class="flexbox vcenter">
           <h2>
             <center>Scrum</center>
@@ -273,6 +349,61 @@ URL: https://code.google.com/p/io-2012-slides
             <center>master</center>
           </h3>
         </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Development</center>
+          </h2>
+          <h3>
+            <center>team</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Scrum</center>
+          </h2>
+          <h3>
+            <center>reuniones</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Standup</center>
+          </h2>
+          <h3>
+            <center>Meeting</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Retrospectivas</center>
+          </h2>
+        </article>
+      </slide>
+
+            <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Retrospectivas</center>
+          </h2>
+          <h3>
+            <center>Mejora continua</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
       </slide>
 
       <slide >
@@ -333,6 +464,17 @@ URL: https://code.google.com/p/io-2012-slides
       <slide >
         <article class="flexbox vcenter">
           <h2>
+            <center>El equipo</center>
+          </h2>
+          <h3>
+            <center>se gestiona a sí mismo</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
             <center>Otros</center>
           </h2>
           <h3>
@@ -341,7 +483,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide class="fill nobackground" style="background-image: url(images/sky.jpg)">
+      <slide class="fill nobackground" style="background-image: url(images/formula1.jpg)">
         <hgroup>
           <h2 class="white">Fórmula 1</h2>
         </hgroup>
