#new changes to template

--- a/io-2012-slides/template.html
+++ b/io-2012-slides/template.html
@@ -357,8 +357,21 @@ URL: https://code.google.com/p/io-2012-slides
             <center>Development</center>
           </h2>
           <h3>
-            <center>team</center>
+            <center>Team</center>
           </h3>
+        </article>
+      </slide>
+
+      <slide>
+        <hgroup>
+          <h3>Resumiendo los roles</h3>
+        </hgroup>
+        <article>
+          <ul class="build">
+            <li>Scrum Master</li>
+            <li>Product Owner</li>
+            <li>Development Team</li>
+          </ul>
         </article>
       </slide>
 
@@ -376,6 +389,17 @@ URL: https://code.google.com/p/io-2012-slides
       <slide >
         <article class="flexbox vcenter">
           <h2>
+            <center>Sprint</center>
+          </h2>
+          <h3>
+            <center>Planning</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
             <center>Standup</center>
           </h2>
           <h3>
@@ -384,7 +408,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide >
+      <slide class="reverse">
         <article class="flexbox vcenter">
           <h2>
             <center>Retrospectivas</center>
@@ -405,6 +429,18 @@ URL: https://code.google.com/p/io-2012-slides
 
       <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
       </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Volviendo al</center>
+          </h2>
+          <h3>
+            <center>manifiesto</center>
+          </h3>
+        </article>
+      </slide>
+
 
       <slide >
         <article class="flexbox vcenter">
@@ -475,6 +511,28 @@ URL: https://code.google.com/p/io-2012-slides
       <slide >
         <article class="flexbox vcenter">
           <h2>
+            <center>Bus</center>
+          </h2>
+          <h3>
+            <center>factor</center>
+          </h3>
+        </article>
+      </slide>
+
+     <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Calidad del</center>
+          </h2>
+          <h3>
+            <center>software</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
             <center>Otros</center>
           </h2>
           <h3>
@@ -487,6 +545,14 @@ URL: https://code.google.com/p/io-2012-slides
         <hgroup>
           <h2 class="white">Fórmula 1</h2>
         </hgroup>
+      </slide>
+
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>¿Preguntas?</center>
+          </h2>
+        </article>
       </slide>
 
 
