--- a/io-2012-slides/template.html
+++ b/io-2012-slides/template.html
@@ -113,16 +113,7 @@ URL: https://code.google.com/p/io-2012-slides
       <slide class="fill nobackground" style="background-image: url(images/xkcd.png)">
       </slide>
 
-      <slide>
-        <article class="flexbox vcenter">
-          <h2>
-            <center>"Hay que volver a hacerlo</center>
-          </h2>
-          <h3>
-            <center>desde cero"</center>
-          </h3>
-        </article>
-      </slide>
+
 
       <slide class="reverse">
         <article class="flexbox vcenter">
@@ -199,12 +190,12 @@ URL: https://code.google.com/p/io-2012-slides
 
       <slide class="fill nobackground" style="background-image: url(images/zamora.jpg)">
         <hgroup>
-          <h3>Fútbol</h3>
+          <h3>¿Entrenadores de porteros?</h3>
         </hgroup>
         <article>
-          <ul class="build">
-            <li style="color: #F88017;font-weight:bold">1863</li>
-            <li style="color: #F88017;font-weight:bold">1980</li>
+          <ul class="build" style="list-style: none;">
+            <li style="color: black;font-weight:bold">      1863</li>
+            <li style="color: black;font-weight:bold">      1980</li>
           </ul>
         </article>
       </slide>
@@ -295,7 +286,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-       <slide class="fill nobackground" style="background-image: url(images/scrum.png)">
+      <slide class="fill nobackground" style="background-image: url(images/scrum.png)">
       </slide>
 
       <slide class="fill nobackground" style="background-image: url(images/incremental.png)">
@@ -308,6 +299,17 @@ URL: https://code.google.com/p/io-2012-slides
           </h2>
           <h3>
             <center>al cliente</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Dar valor</center>
+          </h2>
+          <h3>
+            <center>temprano</center>
           </h3>
         </article>
       </slide>
@@ -375,6 +377,9 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
+      <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
+      </slide>
+
       <slide >
         <article class="flexbox vcenter">
           <h2>
@@ -408,7 +413,19 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide class="reverse">
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Sprint</center>
+          </h2>
+          <h3>
+            <center>Review</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide>
         <article class="flexbox vcenter">
           <h2>
             <center>Retrospectivas</center>
@@ -416,7 +433,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-            <slide >
+      <slide class="reverse">
         <article class="flexbox vcenter">
           <h2>
             <center>Retrospectivas</center>
@@ -427,20 +444,22 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide class="fill nobackground" style="background-image: url(images/rightthings.jpg)">
-      </slide>
-
-      <slide >
-        <article class="flexbox vcenter">
-          <h2>
-            <center>Volviendo al</center>
-          </h2>
-          <h3>
-            <center>manifiesto</center>
-          </h3>
+      <slide>
+        <hgroup>
+          <h3>Resumiendo las reuniones</h3>
+        </hgroup>
+        <article>
+          <ul class="build">
+            <li>Sprint planning</li>
+            <li>Standup meeting</li>
+            <li>Sprint review</li>
+            <li>Retrospectivas</li>
+          </ul>
         </article>
       </slide>
 
+      <slide class="fill nobackground" style="background-image: url(images/scrumresumen.jpg)">
+      </slide>
 
       <slide >
         <article class="flexbox vcenter">
@@ -453,13 +472,13 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide class='reverse'>
+      <slide >
         <article class="flexbox vcenter">
           <h2>
-            <center>"No tenemos</center>
+            <center>Top 3 frases</center>
           </h2>
           <h3>
-            <center>tiempo"</center>
+            <center>al implantar Agile</center>
           </h3>
         </article>
       </slide>
@@ -467,10 +486,21 @@ URL: https://code.google.com/p/io-2012-slides
       <slide class='reverse'>
         <article class="flexbox vcenter">
           <h2>
-            <center>"Personas</center>
+            <center>"Agile</center>
           </h2>
           <h3>
-            <center>en varios proyectos"</center>
+            <center>no funcionará"</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide class='reverse'>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>"Muchos</center>
+          </h2>
+          <h3>
+            <center>proyectos"</center>
           </h3>
         </article>
       </slide>
@@ -508,6 +538,17 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
+      <slide class="reverse">
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Implica</center>
+          </h2>
+          <h3>
+            <center>tomar decisiones</center>
+          </h3>
+        </article>
+      </slide>
+
       <slide >
         <article class="flexbox vcenter">
           <h2>
@@ -519,7 +560,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-     <slide >
+      <slide >
         <article class="flexbox vcenter">
           <h2>
             <center>Calidad del</center>
@@ -528,23 +569,6 @@ URL: https://code.google.com/p/io-2012-slides
             <center>software</center>
           </h3>
         </article>
-      </slide>
-
-      <slide >
-        <article class="flexbox vcenter">
-          <h2>
-            <center>Otros</center>
-          </h2>
-          <h3>
-            <center>entornos</center>
-          </h3>
-        </article>
-      </slide>
-
-      <slide class="fill nobackground" style="background-image: url(images/formula1.jpg)">
-        <hgroup>
-          <h2 class="white">Fórmula 1</h2>
-        </hgroup>
       </slide>
 
       <slide class="reverse">
@@ -561,26 +585,24 @@ URL: https://code.google.com/p/io-2012-slides
         <article class="flexbox vleft auto-fadein">
           <h2>¡Gracias!</h2>
           <p>Javier Martínez</p>
+          <p>http://agile-aragon.org/</p>
           <p>@lasdelpulpo</p>
         </article>
       </slide>
 
+    </slides>
 
-    <slide class="backdrop"></slide>
+    <script>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-XXXXXXXX-1']);
+    _gaq.push(['_trackPageview']);
 
-  </slides>
-
-  <script>
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-XXXXXXXX-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-  </script>
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
 
 <!--[if IE]>
   <script src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
