--- a/io-2012-slides/template.html
+++ b/io-2012-slides/template.html
@@ -92,12 +92,8 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-
       <slide class="fill nobackground" style="background-image: url(images/commit.jpg)">
       </slide>
-
-
-
 
       <slide class="reverse">
         <article class="flexbox vcenter">
@@ -112,8 +108,6 @@ URL: https://code.google.com/p/io-2012-slides
 
       <slide class="fill nobackground" style="background-image: url(images/xkcd.png)">
       </slide>
-
-
 
       <slide class="reverse">
         <article class="flexbox vcenter">
@@ -132,10 +126,10 @@ URL: https://code.google.com/p/io-2012-slides
       <slide>
         <article class="flexbox vcenter">
           <h2>
-            <center>Individuals and interactions</center>
+            <center>Individuos e interacciones</center>
           </h2>
           <h4>
-            <center>Processes and tools</center>
+            <center>Procesos y herramientas</center>
           </h4>
         </article>
       </slide>
@@ -143,10 +137,10 @@ URL: https://code.google.com/p/io-2012-slides
       <slide class="reverse">
         <article class="flexbox vcenter">
           <h2>
-            <center>Working software</center>
+            <center>Software funcionando</center>
           </h2>
           <h4>
-            <center>Comprehensive documentation</center>
+            <center>Documentación extensiva</center>
           </h4>
         </article>
       </slide>
@@ -154,10 +148,10 @@ URL: https://code.google.com/p/io-2012-slides
       <slide>
         <article class="flexbox vcenter">
           <h2>
-            <center>Customer collaboration</center>
+            <center>Colaboración con el cliente</center>
           </h2>
           <h4>
-            <center>Contract negotiation</center>
+            <center>Negociación contractual</center>
           </h4>
         </article>
       </slide>
@@ -165,28 +159,17 @@ URL: https://code.google.com/p/io-2012-slides
       <slide class="reverse">
         <article class="flexbox vcenter">
           <h2>
-            <center>Responding to change</center>
+            <center>Respuesta ante el cambio</center>
           </h2>
           <h4>
-            <center>Contract negotiation</center>
+            <center>Seguir un plan</center>
           </h4>
         </article>
       </slide>
 
       <slide class="fill nobackground" style="background-image: url(images/manifesto.png)">
       </slide>
-
-      <slide>
-        <article class="flexbox vcenter">
-          <h2>
-            <center>Hacemos algo</center>
-          </h2>
-          <h3>
-            <center>distinto</center>
-          </h3>
-        </article>
-      </slide>
-
+   
 
       <slide class="fill nobackground" style="background-image: url(images/zamora.jpg)">
         <hgroup>
@@ -200,23 +183,14 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-
-      <slide>
+   <slide>
         <article class="flexbox vcenter">
           <h2>
-            <center>¿Desarrolladores</center>
+            <center>Hacemos algo</center>
           </h2>
           <h3>
-            <center>con traje?</center>
+            <center>distinto</center>
           </h3>
-        </article>
-      </slide>
-
-      <slide>
-        <article class="flexbox vcenter">
-          <h2>
-            <center>Herencia</center>
-          </h2>
         </article>
       </slide>
 
@@ -254,7 +228,7 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
-      <slide>
+       <slide>
         <hgroup>
           <h3>En resumen...</h3>
         </hgroup>
@@ -266,6 +240,28 @@ URL: https://code.google.com/p/io-2012-slides
           </ul>
         </article>
       </slide>
+
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>¿Y por qué</center>
+          </h2>
+          <h3>
+            <center>trabjamos igual?</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide>
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Herencia</center>
+          </h2>
+        </article>
+      </slide>
+
+
 
       <slide >
         <article class="flexbox vcenter">
@@ -552,6 +548,17 @@ URL: https://code.google.com/p/io-2012-slides
       <slide >
         <article class="flexbox vcenter">
           <h2>
+            <center>¿Quién asigna</center>
+          </h2>
+          <h3>
+            <center>el trabajo?</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
             <center>Bus</center>
           </h2>
           <h3>
@@ -571,6 +578,42 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
       </slide>
 
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Code</center>
+          </h2>
+          <h3>
+            <center>review</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide >
+        <article class="flexbox vcenter">
+          <h2>
+            <center>Pair</center>
+          </h2>
+          <h3>
+            <center>programming</center>
+          </h3>
+        </article>
+      </slide>
+
+      <slide>
+        <hgroup>
+          <h3>En definitiva...</h3>
+        </hgroup>
+        <article>
+          <ul class="build">
+            <li>Romper con la herencia</li>
+            <li>Dar valor temprano</li>
+            <li>Crecer como equipo</li>
+            <li>Mejora continua</li>
+          </ul>
+        </article>
+      </slide>
+
       <slide class="reverse">
         <article class="flexbox vcenter">
           <h2>
@@ -578,7 +621,6 @@ URL: https://code.google.com/p/io-2012-slides
           </h2>
         </article>
       </slide>
-
 
       <slide class="thank-you-slide segue nobackground">
         <aside class="gdbar right"><img src="images/agilearagon.jpg"></aside>
